--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,7 +1,13 @@
 {
   "store.home": { 
     "blocks": [
-      
+      "rich-text"
     ]
+  },
+  "rich-text":{
+    "props":{
+      "text":"HOLA MUNDO",
+      "textPosition":"CENTER"
+    }
   }
 }
