--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,8 +6,8 @@
   },
   "rich-text":{
     "props":{
-      "text":"HOLA MUNDO",
-      "textPosition":"CENTER"
+      "text":"**HOLA MUNDO**",
+      "textPosition":"RIGHT"
     }
   }
 }
