--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -3,7 +3,8 @@
     "blocks": [
       "flex-layout.row",
       "info-card#rethink",
-      "shelf"
+      "shelf",
+      "slider-layout#home"
     ]
   },
   "flex-layout.row":{
