--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -5,7 +5,7 @@
         "props": {
           "autoplay": {
             "timeout": 7000,
-            "stopOnHover": false
+            "stopOnHover": true
           }
         }
       },
