--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -74,7 +74,8 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": "Coffee Makers Collection"
+      "alt": "Coffee Makers Collection",
+      "width": "100%"
     }
   },
   
@@ -84,7 +85,8 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": "Coffee Makers Collection"
+      "alt": "Coffee Makers Collection",
+      "width": "100%"
     }
   }
 }
