--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -75,7 +75,7 @@
         "url": "/small-appliances/coffee-makers"
       } ,
       "alt": "Coffee Makers Collection",
-      "width": "100%"
+      "maxWidth": "100%"
     }
   },
   
@@ -86,7 +86,7 @@
         "url": "/small-appliances/coffee-makers"
       } ,
       "alt": "Coffee Makers Collection",
-      "width": "100%"
+      "maxWidth": "100%"
     }
   }
 }
