--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,7 @@
 {
   "store.product": {
     "children": [
+      "breadcrumb",
       "flex-layout.row#main"
     ]
   },
@@ -20,7 +21,7 @@
   },
   "flex-layout.col#right": {
     "children": [
-      "product-name", "product-price", "buy-button"
+      "product-name", "product-price","flex-layout.row#qty-sku", "shipping-simulator","buy-button"
     ]
     ,
     "props":{
@@ -33,6 +34,12 @@
       "showSavings" : true,
       "showListPrice" :true
     }
+  },
+  "flex-layout.row#qty-sku": {
+    "children": [
+      "sku-selector",
+      "product-quantity"
+    ]
   }
   
 }
