--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -21,7 +21,7 @@
   },
   "flex-layout.col#right": {
     "children": [
-      "product-name", "product-price","flex-layout.row#qty-sku", "shipping-simulator","buy-button"
+      "product-name","product-identifier.product", "product-price","flex-layout.row#qty-sku", "shipping-simulator","buy-button"
     ]
     ,
     "props":{
