--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -56,7 +56,7 @@
   },
   "sku-selector":{
     "props":{
-      "initialSelection" : [],
+      "initialSelection" : "",
       "showValueNameForImageVariation":true,
       "showVariationsErrorMessage":true
     }
