--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -21,7 +21,7 @@
       "search-fetch-more"
     ],
     "props":{
-      "search-fetch-more":"show-more"
+      "pagination":"show-more"
     }
   }
  }
